[gd_scene load_steps=6 format=3 uid="uid://byltxs7vpqgrg"]

[ext_resource type="Script" path="res://main_menu/new_run.gd" id="1_1alus"]
[ext_resource type="Script" path="res://oink_mode/oinkmodetoggler.gd" id="2_dpp1p"]
[ext_resource type="AudioStream" uid="uid://dp2lyfu50oq0t" path="res://main_menu/audio_main_menu/UI_SFX_Hover.wav" id="3_dktak"]
[ext_resource type="AudioStream" uid="uid://dk6rmne6bp4ty" path="res://main_menu/audio_main_menu/UI_SFX_Select.wav" id="4_31w8t"]
[ext_resource type="AudioStream" uid="uid://bmru1v0rpodyo" path="res://main_menu/audio_main_menu/UI_SFX_NewRun.wav" id="5_nfgaa"]

[node name="MainMenu" type="Node"]

[node name="NewRun" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.309
anchor_right = 0.109
anchor_bottom = 0.358
offset_left = -0.384003
offset_top = -0.23201
offset_right = 0.431992
offset_bottom = -0.984009
text = "New Run"
script = ExtResource("1_1alus")

[node name="OinkModeToggler" type="Node" parent="."]
script = ExtResource("2_dpp1p")

[node name="Audio_UI_Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dktak")
bus = &"UI_SFX"

[node name="Audio_UI_Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_31w8t")
bus = &"UI_SFX"

[node name="Audio_UI_NewRun" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nfgaa")
bus = &"UI_SFX"

[connection signal="button_up" from="NewRun" to="NewRun" method="_on_button_up"]
[connection signal="mouse_entered" from="NewRun" to="NewRun" method="_on_mouse_entered"]
[connection signal="pressed" from="NewRun" to="NewRun" method="_on_pressed"]
